Fix spacing and remove test css and remove commented out code (sticky call that was replaced)

--- a/cartridges/int_stickyio_sfra/cartridge/client/default/scss/stickyioSubscriptionManagement.scss
+++ b/cartridges/int_stickyio_sfra/cartridge/client/default/scss/stickyioSubscriptionManagement.scss
@@ -1,5 +1,3 @@
-.kenTest{margin-top: 10px;}
-.kenTest2{display:none;}
 .stickyiosubscriptionresponse {
     border: 0.1em dashed #000;
     padding: 0.5em;
